--- a/styles/style.css
+++ b/styles/style.css
@@ -14,17 +14,96 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: var(--fonteBase);
 }
-body{
-    background-color: var(--cor01);
-    margin: auto;
-    text-align: center;
+body {
+    background: #333853;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    font: 600 1rem 'Roboto';
+    color: white;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
 }
+
 main {
     display: flex;
-    gap: 0.1rem;
+    gap: 2.4rem;
     justify-content: center;
+    flex-direction: row;
 }
+
 section {
+    opacity: 0.6;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    align-items: center;
+    gap: 1.2rem;
+}
+
+aside {
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    grid-column: 1;
+    grid-row: 1;
+    gap: 1rem;
+}
+
+a {
+    background: #3c4262;
+    padding: 1rem;
+    border-radius: 0.6rem;
+    text-decoration: none;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+    opacity: 0.6;
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+}
+
+h1 {
+    font-size: 48pt;
+    opacity: 0.6;
+}
+
+input {
+    background: #3c4262;
+    border: 0;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+    width: 200px;
+    height: 150px;
+    border-radius: 0.6rem;
+    text-align: center;
+    color: white;
+    font: 700 96pt 'Roboto';
+    grid-column: 2;
+    outline: 0;
+}
+
+legend {
+    grid-column: 2;
+    grid-row: 2;
+    text-align: center;
+}
+
+button {
+    color: #333853;
+    border-radius: 50%;
+    border: 0;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #949ac2;
+    cursor: pointer;
+    font-size: 24px;
+    outline: 0;
 }
