--- a/styles/style.css
+++ b/styles/style.css
@@ -107,3 +107,9 @@ button {
     font-size: 24px;
     outline: 0;
 }
+#youregay {
+    position: absolute; 
+    display: flex;
+    align-items: center;
+    bottom: 0px;
+}
